# ssmdam

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  baseline_params.yaml  data.dvc  dvc.yaml  easy_install.sh  easy_setup.sh  environment.yaml  environment.yml  param_variations.yaml  params.yaml  pyproject.toml  test.ipynb  test.py
.dvc/: config
acoustic_anomaly_detection/: dataset.py  evaluate.py  features.py  finetune.py  loss.py  model.py  prepare.py  run.py  test.py  train.py  utils.py
data/: dcase2023t2.dvc
data/raw/: .gitignore  dcase2023t2.dvc
data/raw/valve/: .gitignore  attributes_00.csv.dvc
data/raw/valve/test/: .gitignore  section_00_source_test_anomaly_0000_pat_00.wav.dvc  section_00_source_test_anomaly_0001_pat_01.wav.dvc  section_00_source_test_anomaly_0002_pat_00.wav.dvc  section_00_source_test_anomaly_0003_pat_01.wav.dvc  section_00_source_test_anomaly_0004_pat_01.wav.dvc  section_00_source_test_anomaly_0005_pat_01.wav.dvc  section_00_source_test_anomaly_0006_pat_00.wav.dvc  section_00_source_test_anomaly_0007_pat_01.wav.dvc  section_00_source_test_anomaly_0008_pat_00.wav.dvc  section_00_source_test_anomaly_0009_pat_00.wav.dvc  section_00_source_test_anomaly_0010_pat_01.wav.dvc  section_00_source_test_anomaly_0011_pat_00.wav.dvc  section_00_source_test_anomaly_0012_pat_01.wav.dvc  section_00_source_test_anomaly_0013_pat_01.wav.dvc  section_00_source_test_anomaly_0014_pat_00.wav.dvc  section_00_source_test_anomaly_0015_pat_01.wav.dvc  section_00_source_test_anomaly_0016_pat_01.wav.dvc  section_00_source_test_anomaly_0017_pat_01.wav.dvc  section_00_source_test_anomaly_0018_pat_00.wav.dvc  section_00_source_test_anomaly_0019_pat_01.wav.dvc  section_00_source_test_anomaly_0020_pat_01.wav.dvc  section_00_source_test_anomaly_0021_pat_00.wav.dvc  section_00_source_test_anomaly_0022_pat_01.wav.dvc  section_00_source_test_anomaly_0023_pat_01.wav.dvc  section_00_source_test_anomaly_0024_pat_00.wav.dvc  section_00_source_test_anomaly_0025_pat_01.wav.dvc  section_00_source_test_anomaly_0026_pat_00.wav.dvc  section_00_source_test_anomaly_0027_pat_01.wav.dvc  section_00_source_test_anomaly_0028_pat_00.wav.dvc  section_00_source_test_anomaly_0029_pat_00.wav.dvc  section_00_source_test_anomaly_0030_pat_01.wav.dvc  section_00_source_test_anomaly_0031_pat_00.wav.dvc  section_00_source_test_anomaly_0032_pat_00.wav.dvc  section_00_source_test_anomaly_0033_pat_00.wav.dvc  section_00_source_test_anomaly_0034_pat_00.wav.dvc  section_00_source_test_anomaly_0035_pat_00.wav.dvc  section_00_source_test_anomaly_0036_pat_01.wav.dvc  section_00_source_test_anomaly_0037_pat_01.wav.dvc  section_00_source_test_anomaly_0038_pat_01.wav.dvc  (+161 more)
data/raw/valve/train/: .gitignore  section_00_source_train_normal_0000_pat_00.wav.dvc  (+999 more)
exploration/: attribute_exploration.ipynb  fan_slider_exploration.ipynb  feature_exploration.ipynb  figures.ipynb
mlruns/208760866144852284/: meta.yaml
mlruns/784318892943884831/: meta.yaml
notebooks/: explore_mri.ipynb.dvc  fan_slider_exploration.ipynb  fan_slider_exploration.ipynb.dvc  feature_exploration.ipynb  feature_exploration.ipynb.dvc
results/: metrics.json  params.yaml  report.html
results/plots/metrics/: auprc_epoch.tsv  auroc_epoch.tsv  epoch.tsv
results/plots/metrics/train/: loss.tsv
(+1 files in other folders)
