[tool.poetry]
name = "acoustic-anomaly-detection"
version = "0.1.0"
description = ""
authors = ["Balazs G. Horvath <bghorvath@pm.me>"]
readme = "README.md"
packages = [{include = "acoustic_anomaly_detection"}]

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
dvc = "^3.5.1"
dvc-gs = "^2.22.1"
dvclive = "^2.11.0"
llvmlite = "0.40.1"
lightning = "2.0.2"
torcheval = "0.0.6"

[tool.poetry.group.gpu.dependencies]
torch = { version = "2.0.1", source = "torchcuda" }
torchvision = { version = ">=0.15.2", source = "torchcuda" }
torchaudio = { version = "2.0.2", source = "torchcuda" }

[tool.poetry.group.cpu.dependencies]
torch = { version = "2.0.1+cpu", source = "torchcpu" }
torchvision = { version = ">=0.15.2+cpu", source = "torchcpu" }
torchaudio = { version = "2.0.2+cpu", source = "torchcpu" }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"
matplotlib = "^3.7.1"
librosa = "^0.10.0.post2"
pre-commit = "^3.3.2"
pytest = "^7.3.1"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torchcuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
